rolling_update/ru-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ru-app
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
